--- a/public/home/style.css
+++ b/public/home/style.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background: #f0fcff;
+  background: #f8feff;
   width: 100vw;
   height: 100vh;
 }
@@ -16,7 +16,7 @@ body {
   height: 100vh;
   top: 0;
   left: 0;
-  background: #f0fcff;
+  background: #f8feff;
   text-align: center;
 }
 
@@ -24,4 +24,93 @@ body {
   margin-top: 50vh;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+#nav {
+  position: fixed;
+  width: 100vw;
+  height: auto;
+  min-height: 64px;
+  top: 0;
+  left: 0;
+  background-color: white;
+  -webkit-filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.08));
+          filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.08));
+}
+
+#nav .progress {
+  position: absolute;
+  width: 100vw;
+  height: 2px;
+  top: 0;
+  left: 0;
+}
+
+#nav .progress .bar {
+  background-color: #00aeff;
+  width: 0%;
+  height: 2px;
+  opacity: 0;
+}
+
+#nav .progress[status=loading] .bar {
+  opacity: 1;
+  width: 90vw;
+  -webkit-transition: width 10s 0s cubic-bezier(0.1, 0.88, 0.25, 1), opacity 0.4s;
+  transition: width 10s 0s cubic-bezier(0.1, 0.88, 0.25, 1), opacity 0.4s;
+}
+
+#nav .progress[status=complete] .bar {
+  width: 100vw;
+  opacity: 0;
+  -webkit-transition: width .2s, opacity .4s;
+  transition: width .2s, opacity .4s;
+}
+
+#nav h1 {
+  font-size: 24px;
+  margin: 20px;
+  line-height: 1;
+  font-weight: bold;
+  float: left;
+}
+
+#nav .links {
+  height: auto;
+  min-height: 16px;
+  margin: 20px 24px;
+  float: right;
+}
+
+#nav .links .link {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 16px;
+  padding: 0 12px;
+  opacity: 0.8;
+  -webkit-transition: opacity .1s;
+  transition: opacity .1s;
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+}
+
+#nav .links .link.user {
+  font-weight: bold;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  padding-left: 28px;
+}
+
+#nav .links .link.user i {
+  vertical-align: top;
+  height: 26px;
+}
+
+#nav .links .link:hover {
+  opacity: 1;
+}
+
+#nav .links .link:hover:not(.user) {
+  text-decoration: underline;
 }
