--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -165,6 +165,7 @@ table {
     background-color: white;
     border-radius: 8px;
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.05));
+    border: none;
 
     th {
         font-weight: bold;
@@ -172,11 +173,183 @@ table {
         padding: 16px;
     }
 
+    tr:not([first]) {
+        cursor: pointer;
+        transition: box-shadow .1s;
+        border-radius: 8px;
+
+        &:hover {
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
+        }
+    }
+
     td {
+        border: none;
         font-weight: normal;
         text-align: left;
         opacity: 0.9;
         padding: 12px;
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
+    }
+}
+
+.userspread {
+    width: calc(100vw - 160px);
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 40px;
+
+    background-color: white;
+    border-radius: 8px;
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.05));
+
+    span.return {
+        cursor: pointer;
+
+        i {
+            vertical-align: middle;
+            margin-right: 8px;
+            transform: translateY(-2px);
+            font-size: 20px;
+            transition: transform .2s;
+        }
+
+        &:hover {
+            text-decoration: underline;
+
+            i {
+                transform: translateX(-4px) translateY(-2px);
+            }
+        }
+    }
+
+    h5 {
+        margin: 0;
+        opacity: 0.8;
+        margin-top: 24px;
+    }
+
+    input {
+        font-size: 26px;
+        padding: 12px;
+        margin: 24px 0 8px 0;
+        transform: translateX(-2px);
+        border-radius: 8px;
+        border: none;
+        background-color: rgb(245, 245, 245);
+        border: 2px solid white;
+
+        &:focus {
+            outline: none;
+            border-color: rgba(117, 117, 140, 0.4);
+        }
+
+        &[error] {
+            border-color: rgba(146, 0, 0, 0.4);
+        }
+
+        &[disabled] {
+            opacity: 0.6;
+        }
+    }
+
+    i.status {
+        margin-left: -30px;
+        transition: margin-left .2s;
+
+        &[enabled] {
+            margin-left: 8px;
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        &[loading] {
+            animation: spin 1.5s linear infinite;
+        }
+    }
+
+    h4 {
+        margin: 0;
+        font-weight: bold;
+        font-size: 14px;
+        opacity: 0.8;
+        margin-bottom: 28px;
+    }
+
+    .perm {
+        margin-bottom: 12px;
+
+        .toggle {
+            position: relative;
+            width: 44px;
+            height: 24px;
+            border-radius: 12px;
+            background-color: rgba(0, 0, 0, 0.08);
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 12px;
+            transition: background-color .2s, opacity .2s;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.12);
+            }
+
+            &::after {
+                position: absolute;
+                content: "";
+                width: 18px;
+                height: 18px;
+                top: 3px;
+                left: 3px;
+                border-radius: 9px;
+                background-color: white;
+                filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.1));
+                transition: transform .2s;
+            }
+
+            &[checked] {
+                background-color: #5093ad;
+
+                &::after {
+                    transform: translateX(20px);
+                }
+            }
+
+            &[disabled] {
+                pointer-events: none;
+                opacity: 0.6;
+            }
+        }
+    }
+}
+
+#notifications {
+    position: absolute;
+    bottom: 40px;
+    right: 40px;
+    z-index: 20;
+
+    .notification {
+        padding: 16px;
+        background-color: white;
+        border-radius: 4px;
+        filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.08));
+
+        i {
+            margin-right: 8px;
+            font-size: 18px;
+            vertical-align: middle;
+        }
+
+        span {
+            vertical-align: middle;
+        }
     }
 }
