--- a/public/home/style.css
+++ b/public/home/style.css
@@ -375,6 +375,17 @@ table td {
   opacity: 0.6;
 }
 
+.userspread button {
+  padding: 8px 12px;
+  background: #5093ad;
+  border-radius: 4px;
+  margin-top: 18px;
+  color: white;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 #notifications {
   position: absolute;
   bottom: 40px;
@@ -383,6 +394,7 @@ table td {
 }
 
 #notifications .notification {
+  margin-top: 12px;
   padding: 16px;
   background-color: white;
   border-radius: 4px;
@@ -398,4 +410,76 @@ table td {
 
 #notifications .notification span {
   vertical-align: middle;
+}
+
+#dialogs .overlay {
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+#dialogs .dialog {
+  z-index: 21;
+  width: 400px;
+  height: auto;
+  position: absolute;
+  top: 50vh;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: calc(50vw - 200px);
+  background-color: white;
+  -webkit-filter: drop-shadow(0 0 16px rgba(0, 0, 0, 0.2));
+          filter: drop-shadow(0 0 16px rgba(0, 0, 0, 0.2));
+  border-radius: 8px;
+}
+
+#dialogs .dialog i {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+#dialogs .dialog i:hover {
+  opacity: 1;
+}
+
+#dialogs .dialog h3 {
+  font-size: 28px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 36px;
+}
+
+#dialogs .dialog p {
+  text-align: center;
+  margin-bottom: 24px;
+  opacity: 0.8;
+}
+
+#dialogs .dialog input {
+  width: 244px;
+  margin: 0 70px;
+  padding: 8px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.05);
+  text-align: center;
+}
+
+#dialogs .dialog button {
+  display: block;
+  padding: 8px 12px;
+  background: #5093ad;
+  border-radius: 4px;
+  margin: 32px auto;
+  color: white;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
 }
