--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -328,6 +328,17 @@ table {
             }
         }
     }
+
+    button {
+        padding: 8px 12px;
+        background: #5093ad;
+        border-radius: 4px;
+        margin-top: 18px;
+        color: white;
+        border: none;
+        font-weight: bold;
+        cursor: pointer;
+    }
 }
 
 #notifications {
@@ -337,6 +348,7 @@ table {
     z-index: 20;
 
     .notification {
+        margin-top: 12px;
         padding: 16px;
         background-color: white;
         border-radius: 4px;
@@ -350,6 +362,78 @@ table {
 
         span {
             vertical-align: middle;
+        }
+    }
+}
+
+#dialogs {
+    .overlay {
+        z-index: 20;
+        background-color: rgba(0, 0, 0, 0.4);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .dialog {
+        z-index: 21;
+        width: 400px;
+        height: auto;
+        position: absolute;
+        top: 50vh;
+        transform: translateY(-50%);
+        left: calc(50vw - 200px);
+        background-color: white;
+        filter: drop-shadow(0 0 16px rgba(0, 0, 0, 0.2));
+        border-radius: 8px;
+
+        i {
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            font-size: 18px;
+            cursor: pointer;
+            opacity: 0.6;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
+
+        h3 {
+            font-size: 28px;
+            text-align: center;
+            font-weight: bold;
+            margin-top: 36px;
+        }
+
+        p {
+            text-align: center;
+            margin-bottom: 24px;
+            opacity: 0.8;
+        }
+
+        input {
+            width: 244px;
+            margin: 0 70px;
+            padding: 8px;
+            border: none;
+            background-color: rgba(0, 0, 0, 0.05);
+            text-align: center;
+        }
+
+        button {
+            display: block;
+            padding: 8px 12px;
+            background: #5093ad;
+            border-radius: 4px;
+            margin: 32px auto;
+            color: white;
+            border: none;
+            font-weight: bold;
+            cursor: pointer;
         }
     }
 }
