Require password to change password (frontend)

--- a/public/home/style.css
+++ b/public/home/style.css
@@ -470,6 +470,7 @@ table td {
   border: none;
   background-color: rgba(0, 0, 0, 0.05);
   text-align: center;
+  margin-top: 12px;
 }
 
 #dialogs .dialog button {
