--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -422,6 +422,7 @@ table {
             border: none;
             background-color: rgba(0, 0, 0, 0.05);
             text-align: center;
+            margin-top: 12px;
         }
 
         button {
