--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -580,9 +580,17 @@ table {
         font-weight: bold;
     }
 
+    i {
+        position: absolute;
+        top: 36px;
+        right: 32px;
+        cursor: pointer;
+    }
+
     .instance {
         width: 220px;
-        height: 80px;
+        opacity: 0.8;
+        max-height: 70px;
         padding: 10px;
         border: 1px solid #e6e6e6;
         border-radius: 8px;
@@ -590,6 +598,7 @@ table {
         vertical-align: top;
         margin: 0 12px 0 0;
         cursor: pointer;
+        height: auto;
 
         overflow: hidden;
         white-space: normal;
@@ -620,6 +629,13 @@ table {
         opacity: 1;
         margin-bottom: 24px;
         font-weight: bold;
+    }
+
+    i {
+        position: absolute;
+        top: 36px;
+        right: 32px;
+        cursor: pointer;
     }
 
     .attachment {
