--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -399,6 +399,7 @@ table {
             font-size: 13px;
             font-weight: bold;
             margin-right: 4px;
+            margin-bottom: 4px;
             cursor: pointer;
             filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
         }
