--- a/public/home/style.css
+++ b/public/home/style.css
@@ -449,6 +449,7 @@ table td {
   font-size: 13px;
   font-weight: bold;
   margin-right: 4px;
+  margin-bottom: 4px;
   cursor: pointer;
   -webkit-filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
           filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
