--- a/public/home/style.scss
+++ b/public/home/style.scss
@@ -796,7 +796,7 @@ table {
 }
 
 #notifications {
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     right: 40px;
     z-index: 20;
@@ -824,7 +824,7 @@ table {
     .overlay {
         z-index: 20;
         background-color: rgba(0, 0, 0, 0.4);
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
@@ -835,7 +835,7 @@ table {
         z-index: 21;
         width: 400px;
         height: auto;
-        position: absolute;
+        position: fixed;
         top: 50vh;
         transform: translateY(-50%);
         left: calc(50vw - 200px);
